--- a/index.html
+++ b/index.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Year New Me</title>
+    <!-- css link -->
+    <link rel="stylesheet" href="style.css">
+    <!-- font awsome cdn -->
+    <script src="https://kit.fontawesome.com/321cae72b3.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header>
+        <!-- banner section start -->
+        <section class="banner">
+            <div class="banner-text">
+                <h2 class="banner-caption">All Thinks Are Possible If You believe</h2>
+                <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button class="banner-btn">Contact Us</button>
+            </div>
+        </section>
+    </header>
+
+    <main>
+        <!--My failures of previous year  -->
+        <section class="failure-year">
+            <div class="person">
+                <img src="./images/person.png" alt="">
+            </div>
+
+            <div class="failure-content">
+                <h3 class="caption failure-cap">My failures of previous year</h3>
+                <p class="failure-desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+                    in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                    McClintock.</p>
+
+                <ul class="failure-list">
+                    <li> Contrary to popular belief, is not simply.</li>
+                    <li> Contrary to popular belief.</li>
+                    <li> Contrary to popular belief, is not simply.</li>
+                    <li> Contrary to popular belief.</li>
+                    <li> Contrary to popular belief, is not simply.</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- my plans section-->
+        <section class="my-plan">
+            <h3 class="caption plan-cap">My Plans</h3>
+            <div class="plans">
+                <div class="web">
+                    <img src="./images/icons/web.png" alt="">
+                    <h3>Web Devlopment</h3>
+                    <p class="plan-desc">I want to start</p>
+                </div>
+                <div class="js">
+                    <img src="./images/icons/js.png" alt="">
+                    <h3>JavaScript</h3>
+                    <p class="plan-desc">I want to learn</p>
+                </div>
+                <div class="smoking">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h3>Smoking Habit</h3>
+                    <p class="plan-desc">I want to end</p>
+                </div>
+                <div class="ecom">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h3>Ecommarce</h3>
+                    <p class="plan-desc">I want to develop</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- positive mindset section -->
+        <section class="mindset">
+            <div class="mindset-content">
+                <h2 class="caption mindset-cap">Awlays keep a positive mindset</h2>
+
+                <button class="btn">Call Now</button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
