completed this simple wesite using html raw css

--- a/index.html
+++ b/index.html
@@ -85,7 +85,29 @@
     </main>
 
     <footer>
+        <section class="footer">
+            <div class="left-content">
+                <h3 class="footer-caption">Future</h3>
+                <p class="footer-dsc">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+                </p>
 
+                <p class="email">Email: info@gmail.com</p>
+                <p class="phone">Phone: 01500 00 00</p>
+
+                <div class="icons">
+                    <i class="fa-brands fa-facebook" style="color: #0384e7;"></i>
+                    <i class="fa-brands fa-twitter" style="color: #74C0FC;"></i>
+                    <i class="fa-brands fa-youtube" style="color: rgb(212, 0, 0);"></i>
+                </div>
+            </div>
+
+            <div class="right-content">
+                <h3 class="right-caption">Subscribe</h3>
+                <input class="input-email" type="email" placeholder="Enter your email">
+                <button class="btn">Subscribe</button>
+            </div>
+        </section>
     </footer>
 </body>
 
